yaml_files/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: kodekloud/webapp-color
    name: nginx
    ports:
      - containerPort: 80
#    volumeMounts:
#      - mountPath: "/data"
#        name: volume-name
    command:
      - "sleep"
      - "1000"
    resources:
      requests:
        memory: 10Mi
        cpu: 100m
      limits:
        memory: 15Mi
        cpu: 200m
  volumes:
    - name: vol
      emptyDir: {}
